# blackholeeab

./: .gitigore  README.md  flake.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: blackholeeab-0.1.0.0-inplace.conf  package.cache
research/: CHANGELOG.md  LICENSE  README.md  blackholeeab.cabal
research/app/: Main.hs
stream-producer/: go.mod  go.sum
stream-producer/cmd/main/: main.go
taurus-decoder/: .gitignore  CHANGELOG.md  README.md  flake.nix  stack.yaml  taurus-decoder.cabal
taurus-decoder/src/: Main.hs
