cabal-version:       2.2

name:                taurus-decoder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/taurus-decoder#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Stiv
maintainer:          kenethra.74@gmail.com
copyright:           2025 Stiv
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable taurus-decoder
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       ,bytestring>=0.12.1
                       ,fits-parse>=0.4.2
                       ,vector>=0.13.2
                       ,microlens
                       ,statistics
                       ,hw-kafka-client
                       ,aeson
                       ,array
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/karchx/blackholeeab/taurus-decoder
